<project>
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.dce</groupId>
	<artifactId>EliteDangerousOverlay</artifactId>
	<version>0.0.4-SNAPSHOT</version>

	<name>EliteDangerousOverlay</name>
	<description>EliteDangerousOverlay</description>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Fat jar settings -->
		<main.class>org.dce.ed.EliteDangerousOverlay</main.class>
		<fatjar.finalName>EDO-Overlay</fatjar.finalName>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>2.31.77</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>polly</artifactId>
			<version>2.25.66</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>auth</artifactId>
			<version>2.25.66</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>regions</artifactId>
			<version>2.25.66</version>
		</dependency>

		<!-- optional but recommended so the SDK can log nicely -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.16</version>
		</dependency>

		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>profiles</artifactId>
			<version>2.25.69</version>
		</dependency>

		<!-- JNA core -->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.14.0</version>
		</dependency>

		<!-- JNA platform-specific helpers (User32, WindowUtils, etc.) -->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>5.14.0</version>
		</dependency>

		<dependency>
			<groupId>com.github.kwhat</groupId>
			<artifactId>jnativehook</artifactId>
			<version>2.2.2</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>svgSalamander</artifactId>
			<version>1.1.4</version>
		</dependency>

	</dependencies>

	<build>
		<!-- Name output jar deterministically: target/EDO-Overlay.jar -->
		<finalName>${fatjar.finalName}</finalName>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>

			<!-- Fat jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<!-- Produce a single jar (no classifier like
							"-shaded") -->
							<shadedArtifactAttached>false</shadedArtifactAttached>
							<createDependencyReducedPom>false</createDependencyReducedPom>

							<!-- Avoid signature collisions -->
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>

							<!-- Set Main-Class + merge ServiceLoader resources -->
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${main.class}</mainClass>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>installer</id>

			<properties>
				<!-- IMPORTANT: set this to a real JDK home that contains
				bin\jpackage.exe -->
				<jdk.home>${project.basedir}/dist/EDO/jdk21.0.9_10</jdk.home>

				<app.name>EDO Overlay</app.name>
				<app.version>0.0.1</app.version>

				<!-- Where jpackage will read the jar from -->
				<jpackage.input.dir>${project.build.directory}</jpackage.input.dir>

				<!-- Where the installer will be written -->
				<jpackage.dest.dir>${project.basedir}\dist\installer</jpackage.dest.dir>

				<main.jar>EDO-Overlay.jar</main.jar>
				<vendor>EDO</vendor>
			</properties>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>copy-jnativehook-dll</id>
								<phase>package</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<resources>
										<resource>
											<directory>${project.basedir}\src\main\resources\native</directory>
											<includes>
												<include>JNativeHook.x86_64.dll</include>
											</includes>
										</resource>
									</resources>
									<overwrite>true</overwrite>
								</configuration>
							</execution>
						</executions>
					</plugin>


					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.5.0</version>
						<executions>
							<execution>
								<id>jpackage-msi</id>
								<phase>package</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>${jdk.home}/bin/jpackage.exe</executable>
									<workingDirectory>${project.basedir}</workingDirectory>

									<arguments>
										<argument>--type</argument>
										<argument>msi</argument>

										<argument>--name</argument>
										<argument>${app.name}</argument>

										<argument>--app-version</argument>
										<argument>${app.version}</argument>

										<argument>--vendor</argument>
										<argument>${vendor}</argument>

										<argument>--input</argument>
										<argument>${jpackage.input.dir}</argument>

										<argument>--main-jar</argument>
										<argument>${main.jar}</argument>

										<argument>--dest</argument>
										<argument>${jpackage.dest.dir}</argument>

										<!-- “nice installer” bits -->
										<argument>--win-menu</argument>
										<argument>--win-shortcut</argument>
										<argument>--win-dir-chooser</argument>

										<argument>--icon</argument>
										<argument>
											${project.basedir}\src\main\resources\edo.ico</argument>

										<argument>--win-console</argument>

										<argument>--java-options</argument>
										<argument>-Djava.library.path=$APPDIR</argument>

										<!-- optional JVM tuning -->
										<argument>--java-options</argument>
										<argument>-Xms256m</argument>
										<argument>--java-options</argument>
										<argument>-Xmx1024m</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


</project>
